# gxAgent

./: .gitignore  ALL_FIXES_COMPLETE.md  BEFORE_AFTER_COMPARISON.md  BUG_FIXES.md  BUILD_RELEASE_NOTES.md  BUILD_REPORT.md  BUTTON_STYLE_FINAL.md  CHANGELOG.md  COMPLETE_V1_SUMMARY.md  ENHANCEMENTS_ADDED.md  FINAL_ENHANCEMENTS.md  FINAL_FEATURES_COMPLETE.md  FINAL_FIXES_STATUS.md  FIXES_APPLIED.md  FIXES_APPLIED_FINAL.md  FIXES_COMPLETED.md  FIXES_FINAL.md  INTEGRATION_COMPLETE.md  INTEGRATION_DONE.md  OPTIMIZATIONS_COMPLETE.md  OPTIMIZATION_SUMMARY.md  PARALLEL_TOOL_EXECUTION_COMPLETE.md  README.md  README.zh-CN.md  RELEASE_NOTES.md  SECURITY_FIXES.md  SECURITY_FIXES_SUMMARY.md  TIMEOUT_FIX_COMPLETE.md  TOOL_EXECUTION_ANALYSIS.md  UI_OPTIMIZATION_COMPLETE.md  UI_OPTIMIZATION_PLAN.md  UI_REFACTOR_COMPLETED.md  UI_REFACTOR_GUIDE.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
doc/: discussion_mode_design.md  requirements_specification.md
docs/: CHANGELOG.md
release/gxAgent-v1.1.0-portable/: README.txt
src/: App.backup.css  App.backup.tsx  App.css  App.tsx  main.tsx  rolePresets.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/docs/: MAINTENANCE.md
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  audit.rs  config.rs  crypto.rs  lib.rs  main.rs  mcp.rs  policy.rs  provider.rs  storage.rs  text.rs  tools.rs  workspace.rs
src/components/: CustomPresetForm.tsx
src/hooks/: useCommands.ts  useSessionSearch.ts  useSessionStorage.ts
src/styles/: components.css  enhancements.css  (+2 more)
(+41 files in other folders)
